--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .logo_image {
-    width: 50px;
-    height: 50px;
+    width: 53px;
+    height: 54px;
     vertical-align: middle;
 }
 
@@ -12,4 +12,59 @@
 
 body {
     background-color: #f6f8f9;
+    margin: 0%;
+    padding: 0%;
+}
+
+.header_logo {
+    background-color: #ffffff;
+    width: 100%;
+    margin: 0 auto;
+    max-width: none;
+    padding: 10px;
+}
+
+.options {
+    margin-top: 50px;
+    margin-left: 400px;
+}
+
+.main_planner {
+    background-color: #ffffff;
+    margin-left: 150px;
+    margin-right: 150px;
+    margin-bottom: 25px;
+    border-radius: 10px;
+    text-indent: 60px;
+}
+
+#add_task {
+    background-color: #14aaf5;
+    color: #ffffff;
+    border: 0;
+    border-radius: 5px;
+    width: 100px;
+    height: 25px;
+    font-size: 14px;
+    margin-top: 15px;
+}
+
+#add_section {
+    background-color: #ffffff;
+    color: #e3e6e8;
+    border-color: #e3e6e8;
+    border-radius: 5px;
+    width: 100px;
+    height: 25px;
+    font-size: 14px;
+    margin-top: 15px;
+}
+
+.check_p {
+    color: #a7e7dc;
+    border: 2px solid #a7e7dc;
+    padding: 3px;
+    border-radius: 200px;
+
+
 }
