--- a/style.css
+++ b/style.css
@@ -25,8 +25,11 @@ body {
 }
 
 .options {
-    margin-top: 50px;
-    margin-left: 400px;
+    margin-top: 60px;
+    padding-left: 50px;
+    padding-right: 400px;
+    padding-bottom: 10px;
+    border-bottom: 2px solid rgb(128, 128, 128);
 }
 
 .main_planner {
@@ -35,7 +38,9 @@ body {
     margin-right: 150px;
     margin-bottom: 25px;
     border-radius: 10px;
-    text-indent: 60px;
+    padding-left: 30px;
+    padding-right: 30px;
+
 }
 
 #add_task {
@@ -43,8 +48,8 @@ body {
     color: #ffffff;
     border: 0;
     border-radius: 5px;
-    width: 100px;
-    height: 25px;
+    width: 80px;
+    height: 30px;
     font-size: 14px;
     margin-top: 15px;
 }
@@ -55,7 +60,7 @@ body {
     border-color: #e3e6e8;
     border-radius: 5px;
     width: 100px;
-    height: 25px;
+    height: 30px;
     font-size: 14px;
     margin-top: 15px;
 }
@@ -64,7 +69,14 @@ body {
     color: #a7e7dc;
     border: 2px solid #a7e7dc;
     padding: 3px;
-    border-radius: 200px;
+    border-radius: 500px;
+    padding-left: 50px;
 
+}
 
+.new_task_list {
+    font-weight: bold;
+    font-size: larger;
+    margin-top: 30px;
+    padding-left: 50px;
 }
